--- a/config/default.yml
+++ b/config/default.yml
@@ -4,3 +4,10 @@ serving:
 anidb:
   dir: "anidb"
   index-url: "http://anidb.net/api/anime-titles.xml.gz"
+db:
+  name: {{ if .PG_DBNAME }}"{{ .PG_DBNAME }}"{{ else }}"postgres"{{ end }}
+  host: {{ if .PG_HOST }}"{{ .PG_HOST }}"{{ else }}"localhost"{{ end }}
+  port: {{ if .PG_PORT }}{{ .PG_PORT }}{{ else }}5432{{ end }}
+  user: {{ if .PG_USER }}"{{ .PG_USER }}"{{ else }}"postgres"{{ end }}
+  passwd: {{ if .PG_PASSWD }}"{{ .PG_PASSWD }}"{{ else }}"postgres"{{ end }}
+  ssl-mode: {{ if .PG_SSLMODE }}"{{ .PG_SSLMODE }}"{{ else }}"disable"{{ end }}
