--- a/config/default.yml
+++ b/config/default.yml
@@ -1,6 +1,7 @@
 serving:
   port: 8080
   serve-path: "static"
+  halt-timeout: 60
 anidb:
   dir: "anidb"
   index-url: "http://anidb.net/api/anime-titles.xml.gz"
