--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,4 +10,4 @@ COPY --from=builder /satelit-index/satelit-index.tar.gz /satelit-index/
 RUN ["tar", "-xvf", "satelit-index.tar.gz"]
 RUN ["apk", "add", "curl"]
 ENTRYPOINT ["/satelit-index/entry.sh"]
-HEALTHCHECK --start-period=10s CMD ["curl", "-s", "-I", "http://127.0.0.1:8080/anidb/"]
+HEALTHCHECK --interval=1m --start-period=10s CMD ["curl", "-s", "-I", "http://127.0.0.1:8080/anidb/"]
