--- a/config/default.yml
+++ b/config/default.yml
@@ -6,12 +6,12 @@ anidb:
   update-interval: 86400
   storage-dir: "anidb/dump"
 storage:
-  key: "{{ .DO_SPACES_KEY }}"
-  secret: "{{ .DO_SPACES_SECRET }}"
-  host: "{{ .DO_SPACES_HOST }}"
-  bucket: "{{ .DO_BUCKET }}"
+  key: {{ if .DO_SPACES_KEY }}"{{ .DO_SPACES_KEY }}"{{ else }}"AKIAIOSFODNN7EXAMPLE"{{ end }}
+  secret: {{ if .DO_SPACES_SECRET }}"{{ .DO_SPACES_SECRET }}"{{ else }}"wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"{{ end }}
+  host: {{ if .DO_SPACES_HOST }}"{{ .DO_SPACES_HOST }}"{{ else }}"localhost:9000"{{ end }}
+  bucket: {{ if .DO_BUCKET }}"{{ .DO_BUCKET }}"{{ else }}"satelit"{{ end }}
   upload-timeout: 60
 db:
-  url: {{ if .PG_DB_URL }}"{{ .PG_DB_URL }}"{{ else }}"postgresql://postgres:postgres@localhost/satelit_index?sslmode=disable"{{ end }}
+  url: {{ if .PG_DB_URL }}"{{ .PG_DB_URL }}"{{ else }}"postgresql://postgres@localhost/satelit_index?sslmode=disable"{{ end }}
 logging:
   profile: {{ if .ST_LOG }}"{{ .ST_LOG }}"{{ else }}"dev"{{ end }}
